--- a/docker_yml/news_crawl/requirements.txt
+++ b/docker_yml/news_crawl/requirements.txt
@@ -52,7 +52,6 @@ scrapyd-client==1.2.2
 scrapydweb==1.4.0
 service-identity==21.1.0
 six==1.16.0
-SQLAlchemy==1.4.36
 tldextract==3.3.0
 Twisted==22.4.0
 typing_extensions==4.2.0
@@ -64,3 +63,9 @@ w3lib==1.22.0
 Werkzeug==2.0.2
 zipp==3.8.0
 zope.interface==5.4.0
+SQLAlchemy>=1.2.15,<1.4.0
+playwright
+playwright_stealth
+scrapy_playwright
+spidermon
+rotating_free_proxies
